# ProofParserCSCI2041

./: .final_project_info.ml.swp  .gitignore  README.md  dune-project  final_project.opam  final_project_info.ml  parseme.txt  useme.txt
_build/: log
lib/: ast.ml  dune  final_project.ml  final_project_info.ml  lexer.mll  lexer.mly  parser.mly  procaml.ml  string_of.ml  substitution.ml
test/: dune  final_project.ml  getting_started.ml  moreproofs.ml  new_getting_started.ml  sample.ml
